// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackStatus creates correct snapshot for status types 1`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-stackStatus-1"
  style={
    Object {
      "backgroundColor": "hsl(190, 55%, 85%)",
      "color": "hsl(190, 90%, 15%)",
    }
  }
  type="caption"
>
  Requested
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 2`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-stackStatus-1"
  style={
    Object {
      "backgroundColor": "hsl(65, 70%, 80%)",
      "color": "hsl(65, 100%, 12%)",
    }
  }
  type="caption"
>
  Creating
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 3`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-stackStatus-1"
  style={
    Object {
      "backgroundColor": "hsl(120, 55%, 80%)",
      "color": "hsl(120, 90%, 12%)",
    }
  }
  type="caption"
>
  Ready
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 4`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-stackStatus-1"
  style={
    Object {
      "backgroundColor": "hsl(190, 55%, 85%)",
      "color": "hsl(190, 90%, 15%)",
    }
  }
  type="caption"
>
  Suspended
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 5`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-stackStatus-1"
  style={
    Object {
      "backgroundColor": "hsl(355, 65%, 90%)",
      "color": "hsl(355, 100%, 22%)",
    }
  }
  type="caption"
>
  Unavailable
</WithStyles(ForwardRef(Typography))>
`;
